<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".course.DataMiningActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="@string/data_mining"
            android:textColor="#000"
            android:textSize="32sp"
            android:layout_marginBottom="30dp"
            android:transitionName="header_text" />

        <Button
            android:id="@+id/five_point_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:background="#000"
            android:text="@string/five_point_summary"
            android:onClick="callFPSActivity"
            android:fontFamily="@font/muli_black"
            android:textColor="#fff"
            android:transitionName="button_trans" />

        <Button
            android:id="@+id/zscore_outlier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:background="#000"
            android:text="@string/z_score"
            android:onClick="callZScoreActivity"
            android:fontFamily="@font/muli_black"
            android:textColor="#fff"
            android:transitionName="button_trans" />

        <Button
            android:id="@+id/confusion_matrix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:background="#000"
            android:text="@string/confusion_matrix"
            android:onClick="callConfusionMatrixActivity"
            android:fontFamily="@font/muli_black"
            android:textColor="#fff"
            android:transitionName="button_trans" />

        <Button
            android:id="@+id/kmeans_clustering"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:background="#000"
            android:text="@string/kmeans_clustering"
            android:onClick="callKMeansClusterActivity"
            android:fontFamily="@font/muli_black"
            android:textColor="#fff"
            android:transitionName="button_trans" />

        <Button
            android:id="@+id/distance_matrix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:background="#000"
            android:text="Distance Matrix"
            android:onClick="callDistanceMatrixActivity"
            android:fontFamily="@font/muli_black"
            android:textColor="#fff"
            android:transitionName="button_trans" />

        <Button
            android:id="@+id/correlation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:background="#000"
            android:text="Correlation"
            android:onClick="callCorrelationActivity"
            android:fontFamily="@font/muli_black"
            android:textColor="#fff"
            android:transitionName="button_trans" />

    </LinearLayout>



</ScrollView>